add xfce4-volumed-pulse to apps

--- a/README
+++ b/README
@@ -37,6 +37,7 @@ Senarai Paket:
   -  xfce4-screenshooter
   -  xfce4-taskmanager
   -  xfce4-terminal
+  -  xfce4-volumed-pulse
 - Colok-masuk panel:
   -  xfce4-clipman-plugin
   -  xfce4-datetime-plugin
