--- a/README
+++ b/README
@@ -44,8 +44,13 @@ Senarai Paket:
   -  xfce4-cpufreq-plugin
   -  xfce4-datetime-plugin
   -  xfce4-diskperf-plugin
+  -  xfce4-fsguard-plugin
+  -  xfce4-genmon-plugin
+  -  xfce4-mount-plugin
+  -  xfce4-netload-plugin
   -  xfce4-pulseaudio-plugin
   -  xfce4-sensors-plugin
+  -  xfce4-smartbookmark-plugin
   -  xfce4-systemload-plugin
   -  xfce4-weather-plugin
   -  xfce4-whiskermenu-plugin
