add paper-icon-theme to extra

--- a/README
+++ b/README
@@ -62,6 +62,7 @@ Senarai Paket:
 - Aplikasi tambahan
   -  xarchiver
   -  xfce-polkit
+  -  paper-icon-theme
 
 Sila digunakan dengan bebas, namun tidak ada jaminan paket yang dihasilkan dapat bekerja di sistem milik anda.
 
