--- a/README
+++ b/README
@@ -56,6 +56,7 @@ Senarai Paket:
   -  xfce4-sensors-plugin
   -  xfce4-smartbookmark-plugin
   -  xfce4-systemload-plugin
+  -  xfce4-timer-plugin
   -  xfce4-weather-plugin
   -  xfce4-whiskermenu-plugin
   -  xfce4-xkb-plugin
