--- a/README
+++ b/README
@@ -62,6 +62,7 @@ Senarai Paket:
 - Colok-masuk Thunar
   -  thunar-archive-plugin
   -  thunar-media-tags-plugin
+  -  thunar-vcs-plugin
 - Aplikasi tambahan
   - Aplikasi
     -  xarchiver
