--- a/README
+++ b/README
@@ -28,14 +28,20 @@ Senarai Paket:
   -  glade
   -  gtksourceview3
   -  libwnck3
+  -  pexpect
+  -  ptyprocess
+  -  python-distutils-extra
+  -  pyxdg
   -  upower
 - Aplikasi:
+  -  catfish
   -  mousepad
   -  orage
   -  parole
   -  ristretto
   -  xfce4-dict
   -  xfce4-notifyd
+  -  xfce4-panel-profiles
   -  xfce4-screenshooter
   -  xfce4-taskmanager
   -  xfce4-terminal
