--- a/README
+++ b/README
@@ -57,7 +57,7 @@ Senarai Paket:
   -  xfce4-mount-plugin
   -  xfce4-netload-plugin
   -  xfce4-pulseaudio-plugin
-  -  xfce4-sensors-plugin
+  -  xfce4-sensors-plugin 1.3.90
   -  xfce4-smartbookmark-plugin
   -  xfce4-systemload-plugin
   -  xfce4-timer-plugin
