--- a/README
+++ b/README
@@ -48,7 +48,7 @@ Senarai Paket:
   -  xfce4-volumed-pulse 0.2.3
 - Colok-masuk panel:
   -  xfce4-battery-plugin
-  -  xfce4-clipman-plugin
+  -  xfce4-clipman-plugin 1.4.3
   -  xfce4-cpufreq-plugin
   -  xfce4-datetime-plugin
   -  xfce4-diskperf-plugin
