--- a/README
+++ b/README
@@ -59,7 +59,7 @@ Senarai Paket:
   -  xfce4-pulseaudio-plugin
   -  xfce4-sensors-plugin 1.3.90
   -  xfce4-smartbookmark-plugin
-  -  xfce4-systemload-plugin
+  -  xfce4-systemload-plugin 1.2.2
   -  xfce4-timer-plugin
   -  xfce4-weather-plugin
   -  xfce4-whiskermenu-plugin
