--- a/README
+++ b/README
@@ -48,6 +48,7 @@ Senarai Paket:
   -  xfce4-volumed-pulse 0.2.3
 - Colok-masuk panel:
   -  xfce4-battery-plugin
+  -  xfce4-calculator-plugin 0.6.90
   -  xfce4-clipman-plugin 1.4.3
   -  xfce4-cpufreq-plugin
   -  xfce4-datetime-plugin
