--- a/README
+++ b/README
@@ -47,7 +47,7 @@ Senarai Paket:
   -  xfce4-terminal 0.8.7.4
   -  xfce4-volumed-pulse 0.2.3
 - Colok-masuk panel:
-  -  xfce4-battery-plugin
+  -  xfce4-battery-plugin 1.1.2
   -  xfce4-calculator-plugin 0.6.90
   -  xfce4-clipman-plugin 1.4.3
   -  xfce4-cpufreq-plugin
