update libwnck3:3.30.0, gtksourceview3:3.24.9, and xfce4-diskperf-plugin:2.6.1

--- a/README
+++ b/README
@@ -26,8 +26,8 @@ Senarai Paket:
   -  xfwm4 4.13.1
 - Pustaka:
   -  glade 3.22.1
-  -  gtksourceview3 3.24.8
-  -  libwnck3 3.24.1
+  -  gtksourceview3 3.24.9
+  -  libwnck3 3.30.0
   -  pexpect 4.6.0
   -  ptyprocess 0.6.0
   -  python-distutils-extra 2.39
@@ -52,7 +52,7 @@ Senarai Paket:
   -  xfce4-clipman-plugin 1.4.3
   -  xfce4-cpufreq-plugin
   -  xfce4-datetime-plugin
-  -  xfce4-diskperf-plugin
+  -  xfce4-diskperf-plugin 2.6.1
   -  xfce4-fsguard-plugin
   -  xfce4-genmon-plugin
   -  xfce4-mount-plugin
