--- a/README
+++ b/README
@@ -42,6 +42,7 @@ Senarai Paket:
   -  xfce4-dict 0.8.2
   -  xfce4-notifyd 0.4.3
   -  xfce4-panel-profiles 1.0.8
+  -  xfce-screensaver 0.1.4
   -  xfce4-screenshooter 1.9.3
   -  xfce4-taskmanager 1.2.1
   -  xfce4-terminal 0.8.7.4
@@ -63,7 +64,7 @@ Senarai Paket:
   -  xfce4-systemload-plugin 1.2.2
   -  xfce4-timer-plugin
   -  xfce4-weather-plugin
-  -  xfce4-whiskermenu-plugin 2.3.1
+  -  xfce4-whiskermenu-plugin 2.3.2
   -  xfce4-xkb-plugin
 - Colok-masuk Thunar
   -  thunar-archive-plugin
