--- a/README
+++ b/README
@@ -58,6 +58,7 @@ Senarai Paket:
   -  xfce4-genmon-plugin
   -  xfce4-mount-plugin
   -  xfce4-netload-plugin
+  -  xfce4-places-plugin 1.8.0
   -  xfce4-pulseaudio-plugin
   -  xfce4-sensors-plugin 1.3.90
   -  xfce4-smartbookmark-plugin
