--- a/README
+++ b/README
@@ -52,6 +52,7 @@ Senarai Paket:
   -  xfce4-calculator-plugin 0.7.0
   -  xfce4-clipman-plugin 1.4.3
   -  xfce4-cpufreq-plugin
+  -  xfce4-cpugraph-plugin 1.0.90
   -  xfce4-datetime-plugin
   -  xfce4-diskperf-plugin 2.6.1
   -  xfce4-fsguard-plugin
