--- a/README
+++ b/README
@@ -58,23 +58,23 @@ Senarai Paket:
   -  xfce4-cpugraph-plugin 1.0.91
   -  xfce4-datetime-plugin 0.7.1
   -  xfce4-diskperf-plugin 2.6.1
-  -  xfce4-fsguard-plugin
-  -  xfce4-genmon-plugin
-  -  xfce4-mount-plugin
-  -  xfce4-netload-plugin
+  -  xfce4-fsguard-plugin 1.1.0
+  -  xfce4-genmon-plugin 4.0.1
+  -  xfce4-mount-plugin 1.1.3
+  -  xfce4-netload-plugin 1.3.1
   -  xfce4-places-plugin 1.8.0
-  -  xfce4-pulseaudio-plugin
-  -  xfce4-sensors-plugin 1.3.90
-  -  xfce4-smartbookmark-plugin
+  -  xfce4-pulseaudio-plugin 0.4.1
+  -  xfce4-sensors-plugin 1.3.92
+  -  xfce4-smartbookmark-plugin 0.5.0
   -  xfce4-systemload-plugin 1.2.2
-  -  xfce4-timer-plugin
-  -  xfce4-weather-plugin
+  -  xfce4-timer-plugin 1.7.0
+  -  xfce4-weather-plugin 0.9.1
   -  xfce4-whiskermenu-plugin 2.3.2
-  -  xfce4-xkb-plugin
+  -  xfce4-xkb-plugin 0.8.1
 - Colok-masuk Thunar
-  -  thunar-archive-plugin
-  -  thunar-media-tags-plugin
-  -  thunar-vcs-plugin
+  -  thunar-archive-plugin 0.4.0
+  -  thunar-media-tags-plugin 0.3.0
+  -  thunar-vcs-plugin 0.2.0
 - Aplikasi tambahan
   - Aplikasi
     -  xarchiver 0.5.4.14
