--- a/README
+++ b/README
@@ -29,6 +29,7 @@ Senarai Paket:
   -  gtksourceview3 3.24.9
   -  libburn 1.5.0
   -  libisofs 1.5.0
+  -  libunique 1.1.6
   -  libwnck3 3.30.0
   -  pexpect 4.6.0
   -  ptyprocess 0.6.0
