--- a/README
+++ b/README
@@ -62,6 +62,7 @@ Senarai Paket:
   -  xfce4-fsguard-plugin 1.1.0
   -  xfce4-genmon-plugin 4.0.1
   -  xfce4-mount-plugin 1.1.3
+  -  xfce4-notes-plugin 1.8.1
   -  xfce4-netload-plugin 1.3.1
   -  xfce4-places-plugin 1.8.0
   -  xfce4-pulseaudio-plugin 0.4.1
