--- a/README
+++ b/README
@@ -40,6 +40,7 @@ Senarai Paket:
   -  python-distutils-extra 2.39
   -  pyxdg 0.26
   -  upower 0.99.10
+  -  xiccd 0.3.0
 - Aplikasi:
   -  catfish 1.4.6
   -  mousepad 0.4.1
