--- a/panel-plugins/xfce4-systemload-plugin/README
+++ b/panel-plugins/xfce4-systemload-plugin/README
@@ -1,5 +1,3 @@
 System Load plugin for XFce4.
 
-This plugin displays the current system load on
-the XFce4 panel.
-
+This plugin displays the current system load on the XFce4 panel.
