--- a/README
+++ b/README
@@ -102,6 +102,7 @@ Senarai Paket:
     -  rubygem-ffi 1.11.1
     -  gtk-engine-murrine 0.98.2
     -  libsass 3.6.3
+    -  sassc 3.6.1
 
 
 Sila digunakan dengan bebas, namun tidak ada jaminan paket yang dihasilkan dapat bekerja di sistem milik anda.
