--- a/README
+++ b/README
@@ -51,7 +51,7 @@ Senarai Paket:
   -  xfce4-dict 0.8.3
   -  xfce4-notifyd 0.6.1
   -  xfce4-panel-profiles 1.0.10
-  -  xfce-screensaver 0.1.10
+  -  xfce4-screensaver 0.1.10
   -  xfce4-screenshooter 1.9.7
   -  xfce4-taskmanager 1.2.3
   -  xfce4-terminal 0.8.9.2
