--- a/README
+++ b/README
@@ -34,7 +34,6 @@ Senarai Paket:
   -  libburn 1.5.2
   -  libgusb 0.3.4
   -  libisofs 1.5.2
-  -  libunique 1.1.6
   -  libwnck3 3.36.0
   -  pexpect 4.8.0
   -  ptyprocess 0.6.0
@@ -45,14 +44,13 @@ Senarai Paket:
   -  catfish 1.4.13
   -  gigolo 0.5.1
   -  mousepad 0.4.2
-  -  orage 4.12.1
   -  parole 1.0.5
   -  ristretto 0.10.0
   -  xfburn 0.6.2
   -  xfce4-dict 0.8.3
   -  xfce4-notifyd 0.6.1
   -  xfce4-panel-profiles 1.0.10
-  -  xfce-screensaver 0.1.10
+  -  xfce4-screensaver 0.1.10
   -  xfce4-screenshooter 1.9.7
   -  xfce4-taskmanager 1.2.3
   -  xfce4-terminal 0.8.9.2
@@ -69,7 +67,6 @@ Senarai Paket:
   -  xfce4-genmon-plugin 4.0.2
   -  xfce4-mount-plugin 1.1.3
   -  xfce4-netload-plugin 1.3.2
-  -  xfce4-notes-plugin 1.8.1
   -  xfce4-places-plugin 1.8.1
   -  xfce4-pulseaudio-plugin 0.4.3
   -  xfce4-sensors-plugin 1.3.92
