--- a/README
+++ b/README
@@ -69,6 +69,7 @@ Senarai Paket:
   -  xfce4-genmon-plugin 4.0.2
   -  xfce4-mount-plugin 1.1.3
   -  xfce4-netload-plugin 1.3.2
+  -  xfce4-notes-plugin 1.8.1
   -  xfce4-places-plugin 1.8.1
   -  xfce4-pulseaudio-plugin 0.4.3
   -  xfce4-sensors-plugin 1.3.92
