--- a/README
+++ b/README
@@ -67,6 +67,7 @@ Senarai Paket:
   -  xfce4-diskperf-plugin 2.6.2
   -  xfce4-fsguard-plugin 1.1.1
   -  xfce4-genmon-plugin 4.0.2
+  -  xfce4-mailwatch-plugin 1.3.0
   -  xfce4-mount-plugin 1.1.3
   -  xfce4-netload-plugin 1.3.2
   -  xfce4-notes-plugin 1.8.1
