--- a/README
+++ b/README
@@ -71,6 +71,7 @@ Senarai Paket:
   -  xfce4-stopwatch-plugin 0.4.0
   -  xfce4-systemload-plugin 1.2.4
   -  xfce4-timer-plugin 1.7.1
+  -  xfce4-verve-plugin 2.0.1
   -  xfce4-weather-plugin 0.10.2
   -  xfce4-whiskermenu-plugin 2.5.0
   -  xfce4-xkb-plugin 0.8.2
